--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   },
   "homepage": "https://github.com/wedgies/jquery-emoji-picker",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.0",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "gulp": "3.9.1",
+    "gulp-babel": "7.0.1",
+    "gulp-concat": "2.6.1",
+    "gulp-rename": "1.4.0",
+    "gulp-sourcemaps": "2.6.1"
   }
 }
